<resources>
    <string name="app_name">GPSDriverApplication</string>
    <string name="auth_text">Авторизация</string>
    <string name="login_text">Введите логин</string>
    <string name="password_text">Введите пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="exit_to_main_menu_button">X</string>
    <string name="create_user">Создать</string>
    <string name="status_button">Остановить трекинг</string>
    <string name="exceed_limit">Скорость не превышена!</string>
    <string name="turn_GPS">Включите GPS</string>
</resources>