<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/your_view_id_1"
        style="@style/ellipse_14"
        android:background="@drawable/ellipse_14_shape" />

    <TextView
        android:id="@+id/textView"
        style="@style/AuthText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/auth_text"
        android:textAlignment="center"
        android:textSize="42sp"
        android:textStyle="bold"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextLogin"
        style="@style/InputLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_outer"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/login_text"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:visibility="visible"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/InputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_outer"
        android:ems="10"
        android:fontFamily="serif"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <Button
        android:id="@+id/loginButton"
        style="@style/InputButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_button"
        android:text="@string/login_button_text"
        android:textSize="20sp" />

    <View
        android:id="@+id/your_view_id_2"
        style="@style/ellipse_14_r"
        android:background="@drawable/ellipse_14_shape" />

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/compose_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
